# fdsac

./: .clang-format  LICENSE  README.md  meson.build
include/fdsac/: array.h  common.h  fdsac.h  list.h  macros.h  set.h
src/: array.c  list.c  set.c
test/: meson.build  test_array.c  test_list.c  test_set.c
