test_array = executable('test_array', 'test_array.c', dependencies: fdsac_dep)
test('Array', test_array)

test_list = executable('test_list', 'test_list.c', dependencies: fdsac_dep)
test('Doubly linked list', test_list)

test_set = executable('test_set', 'test_set.c', dependencies: fdsac_dep)
test('Hash set', test_set)
